# CodeCoach

./: .gitignore  LICENSE  README.md  analizador_api.py  docker-compose.yml  requirements.txt
CppServer/: CmakeLists.txt  RequestHandler.cpp  RequestHandler.h  compile.sh  example_input.json  format.cpp  format.h  main.cpp  runner.cpp  runner.h
CppServer/runner/: CMakeLists.txt  runner.cpp  runner.h
Documentacion/: READMEN.md
GUI/: AuxCreator.py  Dockerfile  Gui.py  LoginWindow.py  PyLogic.py  analizador_api.py  mock_server.py  requirements.txt  start_ai_server.py
GUI/logic/: auth_logic.py  database_handler.py  user_models.py
server/src/: Cmakelists.txt  Dockerfile  codeExecutor.cpp  codeExecutor.h  main.cpp
